--- a/static/historial.html
+++ b/static/historial.html
@@ -14,10 +14,22 @@
 </head>
 <body>
 
-    <header class="bg-primary text-white text-center p-4">
-        <h1>LinkDentaVeloz</h1>
-        <p class="lead">Plataforma de Gestión de Consultas Dentales</p>
-    </header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
+        <div class="container">
+            <a class="navbar-brand" href="/">LinkDentaVeloz</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/historial.html">Historial</a>
+                    </li>
+                    <!-- Aquí se podrían agregar más enlaces en el futuro -->
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <main class="container mt-5">
         <div class="card shadow-sm">
