--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,24 @@
 </head>
 <body>
 
-    <div class="landing-container">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
+        <div class="container">
+            <a class="navbar-brand" href="/">LinkDentaVeloz</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/historial.html">Historial</a>
+                    </li>
+                    <!-- Aquí se podrían agregar más enlaces en el futuro -->
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <main class="landing-container">
         <div class="landing-box">
             <h1 class="display-4">LinkDentaVeloz</h1>
             <p class="lead">Gestión dental simplificada. Acceda al historial de pacientes con un solo clic.</p>
@@ -22,7 +39,7 @@
                 Ver Historial de Pacientes
             </a>
         </div>
-    </div>
+    </main>
 
     <!-- Bootstrap JS Bundle (incluye Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
